--- a/Dissertation.Rmd
+++ b/Dissertation.Rmd
@@ -107,6 +107,7 @@ theme_update(
 )
 knitr::opts_chunk$set(dev.args = list(bg = "transparent"))
 
+
 # Random seed
 set.seed(973)
 ```
@@ -121,10 +122,16 @@ A graphics processing unit (GPU) running a large language model (LLM) consumes h
 
 # Spiking Neuron Model
 
+## Hodgkin–Huxley
+
+The Hodgkin-Huxley neuron model developed in 1952 by Alan Hodgkin and Andrew Huxley, was the first to quantitatively explain how neurons generate and propagate electrical impulses, or action potentials, by describing the flow of sodium and potassium ions through voltage-gated channels.
+
 
 ## Leaky Integrate-and-Fire Neuron
 
-The leaky integrate-and-fire (LIF) neuron model is the most widely used neuronal model in SNNs due to its simplicity and efficiency which helps it scale for larger networks. The neuron receives weighted spiking inputs from other neurons as can be seen in figure \@ref(fig:my-image) (b). Spikes received by a neuron at time $t$ induce a current $X[t]$. This input current increases the membrane potential, $V[t]$, which is the voltage between the inside of the neuron and the outside. The voltage slowly decays over time, the speed of the decay depends on the membrane time constant, $\tau$. This is the "Leaky Integrate" aspect of the neuron; $X[t]$ is integrated to give $V[t]$ at the same time as $V[t]$ leaks voltage. The neuron leaks voltage till it reaches it's baseline voltage level, $V_{reset}$. This behaviour can be seen in equation (\ref{eqn:lif1}), $H[t]$ is equal equation (\ref{eqn:lif1})to $V[t]$, unless a spike occurs during $t$. This spiking logic is defined in equation (\ref{eqn:lif2}), where $\Theta(x)$ is a function that is $0$ unless $x\geq0$. In other words this function becomes 1 only when the threshold voltage $V_{th}$ is reached. When the threshold voltage is reached, $V[t]$ is set to $V_{reset}$ and a spike is released; if the threshold voltage is not reached then $V[t] = H[t]$. The membrane potential behaviour at spike time is defined in equation (\ref{eqn:lif3}).
+The leaky integrate-and-fire (LIF) neuron model is the most widely used neuronal model in SNNs due to its simplicity and efficiency which helps it scale for larger networks. Simply put, the neuron receives spikes from "pre-synaptic" neurons (figure \@ref(fig:ann-vs-snn) (b)) - these are neurons which feed into the neuron in question; these spikes increase the "membrane potential" of the neuron - which is the voltage between the inside and outside of the neuron. When the membrane potential reaches a threshold voltage, the neuron in question fires a spike to the neurons that it is connected to, and it's membrane voltage resets to a baseline value. 
+
+In order to be modelled computationally, this behaviour is expressed in mathematical terms. Spikes received by a neuron at time $t$ induce a current $X[t]$. This input current increases the membrane potential, $V[t]$, which is the voltage between the inside of the neuron and the outside. The voltage slowly decays over time, the speed of the decay depends on the membrane time constant, $\tau$. This is the "Leaky Integrate" aspect of the neuron; $X[t]$ is integrated to give $V[t]$ at the same time as $V[t]$ leaks voltage. The neuron leaks voltage till it reaches it's baseline voltage level, $V_{reset}$. This behaviour can be seen in equation (\ref{eqn:lif1}), $H[t]$ is equal equation (\ref{eqn:lif1})to $V[t]$, unless a spike occurs during $t$. This spiking logic is defined in equation (\ref{eqn:lif2}), where $\Theta(x)$ is a function that is $0$ unless $x\geq0$. In other words this function becomes 1 only when the threshold voltage $V_{th}$ is reached. When the threshold voltage is reached, $V[t]$ is set to $V_{reset}$ and a spike is released; if the threshold voltage is not reached then $V[t] = H[t]$. The membrane potential behaviour at spike time is defined in equation (\ref{eqn:lif3}).
 
 \begin{equation}
 H[t] = V[t-1] +\frac{1}{\tau}(X[t]-(V[t-1]-V_{reset})),
@@ -141,28 +148,27 @@ V[t]=H[t](1-S[t])+V_{reset}S[t]
 \label{eqn:lif3}
 \end{equation}
 
-Synapse Models
+## Izhikevich
+
+efficiently reproduces diverse spiking patterns with low computational cost
 
 
 
----
+## Synapse Models
 
-Literature discussing different parameters to adjust: firing threshold [@wangLTMDLearningImprovement2022], membrane time constant [@fangIncorporatingLearnableMembrane2021a], weights [@rathiDIETSNNLowLatencySpiking2023], activation function between charging and firing [@jiangKLIFOptimizedSpiking2023].
 
---- 
 
-Other models of neurons include:
 
-**Izhikevich** – efficiently reproduces diverse spiking patterns with low computational cost;  
-**Hodgkin–Huxley** – offers high biophysical accuracy but is computationally intensive.
 
---- 
 
-Todo: Information coding 
+## Information coding 
+
 In digital images, each pixel is stored as a number which represents the red, green, and blue light intensity at that point - a higher number indicates greater intensity of light. In digital audio, each timestep is encoded as a number which indicates the strength of the pressure perturbation at that particular time. So how can an image or audio be passed into a spiking neural network? In other words, how is it turned into spikes? Methods for coding information into spike trains can be classified into two groups - rate coding and temporal coding. A good place to start would be taking inspiration from the brain. Rate coding transfers information in the frequency of spikes at a given moment. Initially it was thought that rate coding was the predominant technique to transmit information within the nervous system [@adrianImpulsesProducedSensory1926], however 
 
- 
----
+
+
+
+
 
 
 # Training Neural Networks
@@ -185,7 +191,7 @@ L= \frac{1}{n} \sum^{n}_{i=1}(y_{i}- \hat{y}_i​)^2
 \label{eqn:loss_mse}
 \end{equation}
 
-To demonstrate how backpropagation works, let's consider this simplified, fully-connected network consisting of a layer of input neurons, hidden neurons, and output neurons (Figure \@ref(fig:ann-vs-snn)). Fully-connected means each neuron in a layer is connected to all neurons in the following layer. 
+To demonstrate how backpropagation works, let's consider this simplified, fully-connected network consisting of a layer of input neurons, hidden neurons, and output neurons (Figure \@ref(fig:mlp_3_layer)). Fully-connected means each neuron in a layer is connected to all neurons in the following layer. 
 
 
 ![X is a 3 by N matrix. H is an 6 by N matrix. Y is a 3 by N matrix. N is the batch length. $w_{1}$ and $w_{2}$ are vectors of weights](images/mlp_3_layer.png){#fig:mlp_3_layer fig-align=center}
@@ -202,7 +208,7 @@ An efficient way to write these weighted summations for all of the neurons in a 
 $$h = x\times W^{'}$$
 $$y = h\times W^{''}$$
 
-The relationship between the equation \ref{eqn:weighted_sum} and the matrix multiplication representation of the network is highlighted in figure \@ref(fig:ann-vs-snn).
+The relationship between the equation \ref{eqn:weighted_sum} and the matrix multiplication representation of the network is highlighted in figure \@ref(fig:matrix_of_network).
 
 ![Matrix multiplication visualisation. ](images/matrix_of_network.png){#fig:matrix_of_network fig-align=center}
 
